Checked if password contains 6+ characters and 1 number

--- a/frontend/src/components/ResetPasswordUpdate.css
+++ b/frontend/src/components/ResetPasswordUpdate.css
@@ -87,7 +87,7 @@ html, body {
     font-size: 55px !important;
     font-weight: bolder;
     white-space: nowrap;
-    top: -160px;
+    top: -180px;
     left: 0px;
   }
 
@@ -184,8 +184,9 @@ html, body {
   .reset-password-update-error {
     color: red;
     position: absolute;
-    bottom: -15px;
-    white-space: nowrap;
+    bottom: -5px;
+    width: 400px;
+    white-space: normal;
   }
 
   .reset-password-success {
