fixed button size

--- a/frontend/src/components/ResetPassword.css
+++ b/frontend/src/components/ResetPassword.css
@@ -127,7 +127,7 @@ html, body {
   .reset-password-continue-button {
     border-radius: 20px;
     border: none;
-    width: 410px;
+    width: 430px;
     height: 37px;
     background-color: #93c83d;
     font-weight: bold;
@@ -154,4 +154,11 @@ html, body {
     font-family: 'Helvetica';
     bottom:-350px;
     right: -250px;
+  }
+
+  .reset-password-error {
+    color: red;
+    position: absolute;
+    bottom: -115px;
+    white-space: nowrap;
   }
