--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -1,9 +1,10 @@
 /* HomePage.css */
 
+
 /*Define the font*/
 @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/Helvetica.ttf') format('truetype'); /* Adjust this path as necessary */
+    src: url('../fonts/helvetica.woff') format('truetype'); /* Adjust this path as necessary */
     font-weight: normal;
     font-style: normal;
 }
