--- a/frontend/src/components/ResetPassword.css
+++ b/frontend/src/components/ResetPassword.css
@@ -11,7 +11,7 @@ html, body {
   /* Define the font */
   @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/Helvetica.ttf') format('truetype');
+    src: url('../fonts/Helvetica.woff') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
