--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -4,7 +4,7 @@
 /*Define the font*/
 @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/helvetica.woff') format('truetype'); /* Adjust this path as necessary */
+    src: url('../fonts/helvetica.woff') format('woff'); /* Adjust this path as necessary */
     font-weight: normal;
     font-style: normal;
 }
@@ -20,6 +20,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Helvetica';
 }
 
 .headerhp {
