--- a/frontend/src/components/SignUp.css
+++ b/frontend/src/components/SignUp.css
@@ -12,7 +12,7 @@ html, body {
 /* Define the font */
 @font-face {
   font-family: 'Helvetica';
-  src: url('../fonts/helvetica.woff') format('truetype');
+  src: url('../fonts/helvetica.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
