--- a/frontend/src/components/ResetPassword.css
+++ b/frontend/src/components/ResetPassword.css
@@ -11,7 +11,7 @@ html, body {
   /* Define the font */
   @font-face {
     font-family: 'Helvetica';
-    src: url('../fonts/Helvetica.woff') format('woff');
+    src: url('../fonts/Helvetica.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
@@ -127,7 +127,7 @@ html, body {
   .reset-password-continue-button {
     border-radius: 20px;
     border: none;
-    width: 430px;
+    width: 410px;
     height: 37px;
     background-color: #93c83d;
     font-weight: bold;
