--- a/frontend/src/components/SignUp.css
+++ b/frontend/src/components/SignUp.css
@@ -1,4 +1,3 @@
-
 /* SignUp.css */
 
 html, body {
@@ -12,7 +11,7 @@ html, body {
 /* Define the font */
 @font-face {
   font-family: 'Helvetica';
-  src: url('../fonts/helvetica.woff') format('woff');
+  src: url('../fonts/Helvetica.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -53,6 +52,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  
 }
 
 .sign-up-center-logo {
@@ -96,7 +96,7 @@ body {
   position: absolute;
   font-size: 55px !important;
   white-space: nowrap;
-  bottom: -200px;
+  bottom: -150px;
   font-family: 'Helvetica-Bold';
 }
 
@@ -199,9 +199,9 @@ body {
   right: -250px;
 }
 
-.signup-error {
+/*Error message will be red*/
+.error {
   color: red;
-  position: absolute;
-  bottom: -40px;
-  white-space: nowrap;
+  bottom: -300px;
+  
 }
